src/ui/snapshots/starcord__ui__frames__login-mocha-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---







                      ┌──────────────────────────────────────────────────────┐
                      │ STAR/CORD                                            │
                      │                                                      │
                      │ sign in                                              │
                      │                                                      │
                      │ 1   scan a code with the phone app                   │
                      │ 2   paste a token                                    │
                      │                                                      │
                      │ q   quit                                             │
                      │                                                      │
                      │ scanning is the safer of the two: no                 │
                      │ password is typed into this terminal.                │
                      │                                                      │
                      │                                                      │
                      │                                                      │
                      └──────────────────────────────────────────────────────┘
