src/ui/snapshots/starcord__ui__frames__menu-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
┌──────┐┌═ First Guild ═─────────┐┌═ #general · First Guild ═──────────────┐┌═ members ═───────────┐
│      ││        settings  close ││            search  pins  zen  settings ││      settings  close │
│@    1││# rules                 ││───────────── new messages ─────────────││REGULARS — 2          │
│FG   2││▾ TEXT CHANNELS         ││ ╭ ↩ @Alex: the first thing anybody sa… ││● Alex                │
│SG   •││  # general (2)         ││  Alex  09:00                           ││● Jo                  │
│··    ││  > about the deploy    ││  yes, that one                         ││ONLINE — 1            │
│      ││  # random              ││  [👍  3] [:pepe: 1]                     ││● Sam                 │
│      ││  ! announcements       ││  Jordan  09:05                         ││OFFLINE — 1           │
│      ││▾ ARCHIVE               ││  @Sam the answer is ▒▒▒▒▒▒▒▒▒ if you   ││● Robin               │
│      ││  # old-decisions       ││  want it                               ││                      │
│      ││               ╔═ message ════════════════════════════════════════╗│                      │
│      ││               ║what can be done                                  ║│                      │
│      ││               ║ reply  r                                         ║│                      │
│      ││               ║ reply, no ping  R                                ║│                      │
│      ││               ║ react  +                                         ║│                      │
│      ││               ║ copy the text  y                                 ║│                      │
│      │└───────────────║ open elsewhere  o                                ║│                      │
│      │┌═ messages ═───║ copy a link  ctrl+y                              ║│                      │
│      ││         friend║                                                  ║│                      │
│      ││○ Wren of the L╚════════════════════════ enter change · esc close ╝│                      │
│      ││○ Alex, Jordan [3]      ││  Alex  09:20                           ▐│                      │
│      ││● Alex (1)              ││  https://tenor.invalid/view/a-cat-1234 ▐│                      │
│      ││                        ││  5                                     ▐│                      │
│      ││                        ││  [gif ▶ a cat, falling over]           ▐│                      │
│      ││                        │└────────────────────────────────────────┘│                      │
│      ││                        │┌═ compose ═─────────────────────────────┐│                      │
│      ││                        ││                     attach  emoji  gif ││                      │
│      ││                        ││message #general · First Guild          ││                      │
└──────┘└────────────────────────┘└────────────────────────────────────────┘└──────────────────────┘
? help  #general · First Guild                                    chat  7 unread · @3  ▲ online  off
