src/ui/snapshots/starcord__ui__frames__picker-emoji-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ servers ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║• First Guild (2)                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ channels · First Gu╔═ emoji ══════════════════════════════════════════════╗═════════════════════╗
║                     ║› pe                                                  ║            settings ║
║# general (2)        ║                                                      ║                     ║
╚═════════════════════║pe  🖊️   🍐   🇵🇪   🍑   🍇   🔁   🎬   🫛   🦚   🥜   ✏️   🐧     ║═════════════════════╝
╔═ #general · First Gu║😔   🔈   🎺   ✉️   🏙️   🧜   📰   🙆   📎   😣   🚤   🦸   🔭     ║═════════════════════╗
║                     ║🇨🇻   🇬🇵   🌶️   🔬   👐   😮   🖇️   🧫   🔂   🫑   🧏   📢   🧑‍🦲     ║arch  pins  settings ║
║  the picture I took ║🩺   🖋️   ☮️   🧧   🧖   🦹   🪚   ☂️   🧻   🙊   🗣️   🦸‍♂️   🧔     ║                     ║
║  [image 1024x768 har║🗞️   🚷   🫂   🤺   💬   🏰   🙍   🤾   🤹   🧎   🎭   🧑‍🦰   🫄     ║                     ║
║  Jordan  09:15      ║🧍   🦸‍♀️   ↖️   📂   🤵   👰   🦹‍♂️   ↗️   🇨🇵   👁️‍🗨️   📨   🔏   🧑‍🦱     ║                     ║
║  https://example.inv║🧑‍🦳   🫅   🇸🇹   🤐   🗨️   👳   🦹‍♀️   🚟   👱   📩   🧑‍🍼   💁   ⛹️     ║                     ║
║  │ A page title     ║🏤   🧑‍🤝‍🧑   🫣   🧑‍🦯   🧑‍🦽   🧑‍🦼   💠   🫢                         ║                     ║
║  │ Two sentences of ║                                                      ║                     ║
║  │ second is there s║                                                      ║                     ║
║  Alex  09:20        ║                                                      ║                     █
║  https://tenor.inval║                                                      ║                     █
║  [gif ▶ a cat, falli║                                                      ║                     █
╚═════════════════════║:pepe:                                                ║═════════════════════╝
╔═ compose ═══════════╚══════════════ enter insert · ctrl+g GIFs · esc close ╝═════════════════════╗
║                                                                               attach  emoji  gif ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ members ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║2 online · 1 idle · 1 offline                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  #general · First Guild                                 compose  7 unread · @3  ▲ online  off
