src/ui/snapshots/starcord__ui__frames__picker-gif-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
┌──────┐┌═ First Guild ═─────────┐┌═ #general · First Guild ═──────────────┐┌═ members ═───────────┐
│      ││        settings  close ││            search  pins  zen  settings ││      settings  close │
│@    1││# rules╔═ a GIF ══════════════════════════════════════════════════════════╗S — 2          │
│FG   2││▾ TEXT ║›                                                                 ║               │
│SG   •││  # gen║                                                                  ║               │
│··    ││  > abo║░░░░░░░░░░░ ░░░░░░░░░░░ ░░░░░░░░░░░                               ║— 1            │
│      ││  # ran║░░░░░░░░░░░ ░░░░░░░░░░░ ░░░░░░░░░░░                               ║               │
│      ││  ! ann║░░░░░░░░░░░ ░░░░░░░░░░░ ░░░░░░░░░░░                               ║ — 1           │
│      ││▾ ARCHI║░░░░░░░░░░░ ░░░░░░░░░░░ ░░░░░░░░░░░                               ║               │
│      ││  # old║░░░░░░░░░░░ ░░░░░░░░░░░ ░░░░░░░░░░░                               ║               │
│      ││       ║░░░░░░░░░░░ ░░░░░░░░░░░ ░░░░░░░░░░░                               ║               │
│      ││       ║a cat, wavi a wave      a party                                   ║               │
│      ││       ║                                                                  ║               │
│      ││       ║                                                                  ║               │
│      ││       ║                                                                  ║               │
│      ││       ║                                                                  ║               │
│      │└───────║                                                                  ║               │
│      │┌═ messa║                                                                  ║               │
│      ││       ║                                                                  ║               │
│      ││○ Wren ║                                                                  ║               │
│      ││○ Alex,║                                                                  ║               │
│      ││● Alex ║                                                                  ║               │
│      ││       ║                                                                  ║               │
│      ││       ║                                                                  ║               │
│      ││       ║                                                                  ║               │
│      ││       ╚═══════════════════════════════════════ enter send it · esc close ╝               │
│      ││                        ││                     attach  emoji  gif ││                      │
│      ││                        ││                                        ││                      │
└──────┘└────────────────────────┘└────────────────────────────────────────┘└──────────────────────┘
? help  #general · First Guild                                 compose  7 unread · @3  ▲ online  off
