src/ui/snapshots/starcord__ui__frames__pictures-chips-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
┌──────┐┌═ First Guild ═─────────┐┌═ #random · First Guild ═───────────────┐┌═ members ═───────────┐
│      ││        settings  close ││            search  pins  zen  settings ││      settings  close │
│@    1││# rules                 ││────── Sunday, 13 September 2026 ───────││REGULARS — 2          │
│FG   2││▾ TEXT CHANNELS         ││───────────── new messages ─────────────││● Alex                │
│SG   •││  # general (2)         ││  Alex  11:00                           ││● Jo                  │
│··    ││  > about the deploy    ││  the picture I took                    ││ONLINE — 1            │
│      ││  # random              ││  [image 400x300 harbour.png]           ││● Sam                 │
│      ││  ! announcements       ││  Jordan  11:01                         ││OFFLINE — 1           │
│      ││▾ ARCHIVE               ││  and one that moves                    ││● Robin               │
│      ││  # old-decisions       ││  [image 96x96 cat.gif]                 ││                      │
│      ││                        ││  Robin  11:02                          ││                      │
│      ││                        ││  nice :pepe: one                       ││                      │
│      ││                        ││  [:pepe: 3]                            ││                      │
│      ││                        ││▕ Jordan  11:03                         ││                      │
│      ││                        ││▕ https://example.invalid/page          ││                      │
│      ││                        ││▕ │ A page with a picture on it         ││                      │
│      │└────────────────────────┘│▕ │ The card's thumbnail is drawn       ││                      │
│      │┌═ messages ═────────────┐│▕ │ against the right edge, so the      ││                      │
│      ││         friends  close ││▕ │ words keep the width they had.      ││                      │
│      ││○ Wren of the Long Displ││                                        ││                      │
│      ││○ Alex, Jordan [3]      ││                                        ││                      │
│      ││● Alex (1)              ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        │└────────────────────────────────────────┘│                      │
│      ││                        │┌═ compose ═─────────────────────────────┐│                      │
│      ││                        ││                     attach  emoji  gif ││                      │
│      ││                        ││message #random · First Guild           ││                      │
└──────┘└────────────────────────┘└────────────────────────────────────────┘└──────────────────────┘
? help  #random · First Guild                                     chat  7 unread · @3  ▲ online  off
