src/ui/snapshots/starcord__ui__frames__pictures-chips-100x40.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 40)"
---
┌═ servers ═───────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                         settings │
│• First Guild (2)                                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌═ channels · First Guild ═────────────────────────────────────────────────────────────────────────┐
│                                                                                         settings │
│# random                                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌═ #random · First Guild ═─────────────────────────────────────────────────────────────────────────┐
│                                                                           search  pins  settings │
│─────────────────────────────────── Sunday, 13 September 2026 ────────────────────────────────────│
│────────────────────────────────────────── new messages ──────────────────────────────────────────│
│  Alex  11:00                                                                                     │
│  the picture I took                                                                              │
│  [image 400x300 harbour.png]                                                                     │
│  Jordan  11:01                                                                                   │
│  and one that moves                                                                              │
│  [image 96x96 cat.gif]                                                                           │
│  Robin  11:02                                                                                    │
│  nice :pepe: one                                                                                 │
│  [:pepe: 3]                                                                                      │
│  Jordan  11:03                                                                                   │
│  https://example.invalid/page                                                                    │
│  │ A page with a picture on it                                                                   │
│  │ The card's thumbnail is drawn against the right edge, so the                                  │
│  │ words keep the width they had.                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌═ compose ═───────────────────────────────────────────────────────────────────────────────────────┐
│                                                                               attach  emoji  gif │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌═ members ═───────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                         settings │
│2 online · 1 idle · 1 offline                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
? help  #random · First Guild                                  compose  7 unread · @3  ▲ online  off
