src/ui/snapshots/starcord__ui__frames__pictures-halfblocks-100x40.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 40)"
---
╔═ S T A R / C O R D ════════════════════════════════════════════════════════════════════ servers ═╗
║                                                                                   ‹  ›  settings ║
║• First Guild (2)                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ CHANNELS — First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║# random                                                                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ CONVERSATION — #random · First Guild ═══════════════════════════════════════════════════════════╗
║                                                                           search  pins  settings ║
║▀▀▀▀ Jordan  11:01                                                                                ║
║▀▀▀▀ and one that moves                                                                           ║
║     ▀▀▀▀▀▀▀▀▀▀▀▀                                                                                 ║
║     ▀▀▀▀▀▀▀▀▀▀▀▀                                                                                 ║
║     ▀▀▀▀▀▀▀▀▀▀▀▀                                                                                 ║
║     ▀▀▀▀▀▀▀▀▀▀▀▀                                                                                 ║
║     ▀▀▀▀▀▀▀▀▀▀▀▀                                                                                 ║
║     ▀▀▀▀▀▀▀▀▀▀▀▀                                                                                 ║
║▀▀▀▀ Robin  11:02                                                                                 ║
║▀▀▀▀ nice ▀▀ one                                                                                  ║
║     [▀▀ 3]                                                                                       ║
║▀▀▀▀ Jordan  11:03                                                                                ║
║▀▀▀▀ https://example.invalid/page                                                                 ║
║     │ A page with a picture on it                                                                ║
║     │ The card's thumbnail is drawn against the right edge, so the                               ║
║     │ words keep the width they had.                                                             █
║                                                                                         ▀▀▀▀▀▀▀▀ █
║                                                                                         ▀▀▀▀▀▀▀▀ █
║                                                                                         ▀▀▀▀▀▀▀▀ █
║                                                                                         ▀▀▀▀▀▀▀▀ █
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ COMPOSE ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                               attach  emoji  gif ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ MEMBERS ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║2 online · 1 idle · 1 offline                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  #random · First Guild                          compose  7 unread · @3  ▲ online  half blocks
