src/ui/snapshots/starcord__ui__frames__quick-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
┌═ servers ═───────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                         settings │
│• First Guild (2)                                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌═ channels · First Guild ═────────────────────────────────────────────────────────────────────────┐
│                                                                                         settings │
│# general (2)                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌═ #general · Firs╔═ jump to ════════════════════════════════════════════════════╗─────────────────┐
│                 ║› gen                                                         ║  pins  settings │
│  the picture I t║                                                              ║                 │
│  [image 1024x768║#general                                           First Guild║                 │
│  Jordan  09:15  ║@Wren of the Long Display Name                          friend║                 │
│  https://example╚════════════════════════════════════════ enter go · esc close ╝                 │
│  │ A page title                                                                                  │
│  │ Two sentences of description, as a link unfurl carries. The                                   │
│  │ second is there so the wrapping has something to do.                                          │
│  Alex  09:20                                                                                     ▐
│  https://tenor.invalid/view/a-cat-12345                                                          ▐
│  [gif ▶ a cat, falling over]                                                                     ▐
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌═ compose ═───────────────────────────────────────────────────────────────────────────────────────┐
│                                                                               attach  emoji  gif │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌═ members ═───────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                         settings │
│2 online · 1 idle · 1 offline                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
? help  #general · First Guild                                 compose  7 unread · @3  ▲ online  off
